--- a/app/templates/app/memo/list.html
+++ b/app/templates/app/memo/list.html
@@ -64,7 +64,7 @@
                 <div class="card-body py-2 px-3">
                     <!-- 1行目: タイトル（左寄せ）と更新日（右寄せ） -->
                     <div class="d-flex justify-content-between align-items-center mb-2">
-                        <h6 class="card-title mb-0 flex-grow-1 mr-2">{{ memo.title|highlight:search_query }}</h6>
+                        <h6 class="card-title mb-0 flex-grow-1 mr-2">{{ memo.title|truncatechars:30|highlight:search_query }}</h6>
                         <span class="text-muted small" style="white-space: nowrap;">
                             <i class="far fa-clock"></i> {{ memo.updated_date|date:"m/d H:i" }}
                         </span>
