--- a/static_root/app/transaction.css
+++ b/static_root/app/transaction.css
@@ -11,6 +11,13 @@
     font-size: 0.95rem;
     margin-bottom: 0.5rem;
     line-height: 1.3;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
 }
 
 .card-sm h6 {
