文言の修正とメモ機能の修正

--- a/app/templates/app/_header.html
+++ b/app/templates/app/_header.html
@@ -13,16 +13,16 @@
             <a class="nav-link" href="{% url 'my_page' user.pk %}">マイページ</a>
           </li>
         <li class="nav-item m-1">
-          <a class="nav-link" href="{% url 'expense_list' %}">支出管理</a>
+          <a class="nav-link" href="{% url 'expense_list' %}">家計簿</a>
         </li>
         <li class="nav-item m-1">
-          <a class="nav-link" href="{% url 'task_list' %}">タスク管理</a>
+          <a class="nav-link" href="{% url 'task_list' %}">スケジュール</a>
         </li>
         <li class="nav-item m-1">
-          <a class="nav-link" href="{% url 'memo_list' %}">メモ管理</a>
+          <a class="nav-link" href="{% url 'memo_list' %}">メモ</a>
         </li>
         <li class="nav-item m-1">
-          <a class="nav-link" href="{% url 'shopping_list' %}">買うものリスト</a>
+          <a class="nav-link" href="{% url 'shopping_list' %}">買いものリスト</a>
         </li>
         <li class="nav-item m-1">
           <a class="nav-link" href="/logout/">ログアウト</a>
@@ -30,4 +30,3 @@
       </ul>
     </div>
   </nav>
-
