--- a/app/templates/app/shopping/list.html
+++ b/app/templates/app/shopping/list.html
@@ -3,7 +3,12 @@
 {% load app_filters %}
 {% block content %}
 <div class="container mt-5">
-    <h2 class="mb-4">買うものリスト</h2>
+    <div class="d-flex flex-wrap justify-content-between align-items-center mb-4">
+        <h2 class="mb-0">買うものリスト</h2>
+        <button onclick="openCreateShoppingModal()" class="btn btn-primary btn-sm mb-1">
+            <i class="fas fa-plus"></i> 新規商品追加
+        </button>
+    </div>
 
     <!-- 検索・絞り込み機能 -->
     <div class="card mb-3">
@@ -356,9 +361,6 @@
         </div>
     </div>
 
-    <button onclick="openCreateShoppingModal()" class="btn btn-primary">
-        <i class="fas fa-plus"></i> 新規商品追加
-    </button>
 </div>
 
 <link rel="stylesheet" href="{% static 'app/modal.css' %}">
