--- a/auth_app/templates/registration/top.html
+++ b/auth_app/templates/registration/top.html
@@ -14,6 +14,19 @@
           <h4 class="mb-0"><i class="fas fa-history"></i> サイト更新履歴</h4>
         </div>
         <div class="card-body">
+          <!-- 2025/11/22 機能改善 -->
+          <div class="update-item mb-4">
+            <div class="d-flex align-items-center mb-2">
+              <span class="badge badge-info mr-2">2025/11/15</span>
+              <h5 class="mb-0">機能改善</h5>
+            </div>
+            <ul class="list-unstyled ml-4">
+              <li class="mb-2"><i class="fas fa-chart-line text-primary"></i> アカウント認証機能を強化しました。</li>
+              <li class="mb-2"><i class="fas fa-paint-brush text-info"></i> 一部文言の変更を行いました。</li>
+              <li class="mb-2"><i class="fas fa-paint-brush text-info"></i> 一部のデザインを変更しました。</li>
+            </ul>
+          </div>
+
           <!-- 2025/11/15 不要機能廃止&新機能公開 -->
           <div class="update-item mb-4">
             <div class="d-flex align-items-center mb-2">
